Complete mobile, tablet and desktop styling along with dark mode. Fix issue with footer dynamic date not working.

--- a/input.css
+++ b/input.css
@@ -16,6 +16,7 @@
     border: 1px solid rgb(233, 235, 237, 1);
     border-radius: 0.7rem;
     box-shadow: 0 1px .625rem 0 hsla(210, 7%, 22%, .06), 0 .125rem .25rem 0 hsla(210, 7%, 22%, .08);
+    @apply dark:bg-[#28364e] dark:border-[#28364e] dark:text-slate-50;
   }
   .dbshadow {
     box-shadow: 0 1px .625rem 0 hsla(210, 7%, 22%, .06), 0 .125rem .25rem 0 hsla(210, 7%, 22%, .08);
@@ -23,11 +24,11 @@
   .primarybtn {
     @apply bg-sky-900 hover:bg-sky-800 transition ease-in-out duration-500 p-3 text-slate-50 rounded-md text-[1.05rem] font-semibold cursor-pointer;
   }
-  .link {
+  .link, .link-footer {
     text-decoration: none;
     position: relative;
   }
-  .link::before {
+  .link::before, .link-footer::before {
     content: '';
     background-color: #bae6fd;
     position: absolute;
@@ -38,7 +39,10 @@
     z-index: -1;
     transition: all .3s ease-in-out;
   }
-  .link:hover::before {
+  .link-footer::before {
+    @apply dark:bg-sky-800;
+  }
+  .link:hover::before, .link-footer:hover::before {
     bottom: -1px;
     height: 100%;
   }
@@ -46,7 +50,7 @@
     display: none !important;
   }
   #tooltip {
-    @apply bg-slate-700 text-slate-50 py-1 px-2 rounded-md relative;
+    @apply bg-slate-700 text-slate-50 py-1 px-2 rounded-md relative z-10;
   }
 }
 
